Fix replicode plugin not deleting its toolview

BUG: 441859
(cherry picked from commit e16167dafa3859f5e8a77d5dd02a14dc4b004576)